# lazer

./: Cargo.toml  README.md  lazer.toml
src/: formatter.rs  init.zsh  main.rs  parser.rs  segment.rs  settings.rs  spec.pest
src/modules/: dir.rs  git.rs  mod.rs  user.rs
