[package]
name = "lazer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.0"
itertools = "0.14.0"
pest = "2.7.15"
pest_derive = "2.7.15"
whoami = "1.5.2"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.97"
config = "0.15.9"
serde_derive = "1.0.219"
serde = "1.0.219"
